app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-ns-ingress
  namespace: store-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: store-ns-alb
    # Target Type and Listener Port


    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:970378220457:certificate/aad8e284-b7e2-4e0d-8426-ebaf59fafb1d # Replace with your ACM certificate ARN
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: narayanxy.shop

      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iphone-service   # Or your main store frontend
                port:
                  number: 80

    # 👇 Default catch-all (matches any host not listed above)
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iphone-service # or your default frontend
                port:
                  number: 80
